$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-07-16 [A] Added plugin hook 'token_criteria' {eenemeenemuu}
2010-07-16 [C] Fixed missing CSS class cpg_summary and icon replacement leading to broken output of help boxes on config screen (thread IDs 65994 and 65996) {GauGau}
2010-07-13 [B] Fixed possibility for users to edit their files in public galleries if disabled in config (thread ID 65693) {eenemeenemuu}
2010-07-13 [A] Disable the possibility for guests to enter file details by default (thread ID 62522) {eenemeenemuu}
2010-07-13 [B] Fixed error message when regular users try to delete their albums in public categories {eenemeenemuu}
2010-07-13 [M] Re-organizing zip archives inside docs folder {GauGau}
2010-07-12 [D] Adding documentation about plugin config options {GauGau}
2010-07-09 [B] Fixed issue when reset file ratings (thread ID 65896) {eenemeenemuu}
2010-07-05 [B] Fixed empty values for 'reason' in 'report to administrator' email (thread ID 65752) {eenemeenemuu}
2010-07-05 [B] Fixed category view when albums with keywords are present (thread ID 64155) {eenemeenemuu}
2010-07-05 [B] Changed type of plugin hooks 'theme_thumbnails_wrapper_start/end' from 'filter' to 'action' and adjusted English documentation accordingly (thread ID 58734) {eenemeenemuu}
2010-07-05 [A] Added search terms to the title of the thumbnails page (thread ID 65840) {eenemeenemuu}
2010-07-05 [A] Added Japanese language file (user contribution) {GauGau}
2010-07-02 [D] Adding boxes to config documentation for defaults, max, min, recomended and record name {GauGau}